--- a/SSXcodeSnippets/SSXcodeSnippets-Info.plist
+++ b/SSXcodeSnippets/SSXcodeSnippets-Info.plist
@@ -38,7 +38,7 @@
 	<key>LSMinimumSystemVersion</key>
 	<string>${MACOSX_DEPLOYMENT_TARGET}</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2014 Media Net. All rights reserved.</string>
+	<string>Copyright © 2014 phyline. All rights reserved.</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
